force-app/main/default/objects/ApiCallout__c/ApiCallout__c.object-meta.xml
<CustomObject>
    <label>ApiCallout</label>
    <nameField>
        <displayFormat>API-{0000000000}</displayFormat>
        <label>ApiCallout Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ApiCallouts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>