force-app/main/default/objects/ApiCallout__c/fields/RequestUrl__c.field-meta.xml
<CustomField>
    <fullName>RequestUrl__c</fullName>
    <label>RequestUrl</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>