force-app/main/default/objects/ApiCallout__c/fields/ResponseStatusCode__c.field-meta.xml
<CustomField>
    <fullName>ResponseStatusCode__c</fullName>
    <label>ResponseStatusCode</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>